--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@aws-amplify/ui-react": "^6.1.13",
     "aws-amplify": "^6.5.2",
+    "bootstrap": "^5.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "styled-components": "^6.1.12"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.0.4",
