--- a/package.json
+++ b/package.json
@@ -13,17 +13,21 @@
     "@aws-amplify/ui-react": "^6.1.13",
     "aws-amplify": "^6.5.2",
     "bootstrap": "^5.3.3",
+    "d3": "^7.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.26.1",
-    "styled-components": "^6.1.12"
+    "styled-components": "^6.1.12",
+    "topojson-client": "^3.1.0"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.0.4",
     "@aws-amplify/backend-cli": "^1.1.1",
+    "@types/d3": "^7.4.3",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
     "@types/react-router-dom": "^5.3.3",
+    "@types/topojson-client": "^3.1.4",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
