--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aws-amplify": "^6.5.2",
     "bootstrap": "^5.3.3",
     "d3": "^7.9.0",
+    "html2pdf.js": "^0.10.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.26.1",
