--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "bootstrap": "^5.3.3",
     "d3": "^7.9.0",
     "html2pdf.js": "^0.10.2",
+    "i18next": "^23.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^15.0.1",
     "react-router-dom": "^6.26.1",
     "router": "^1.3.8",
     "styled-components": "^6.1.12",
