--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^15.0.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "router": "^1.3.8",
     "styled-components": "^6.1.12",
