--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@aws-amplify/ui-react": "^6.1.13",
     "aws-amplify": "^6.5.2",
     "bootstrap": "^5.3.3",
+    "country-list": "^2.3.0",
     "d3": "^7.9.0",
     "html2pdf.js": "^0.10.2",
     "i18next": "^23.14.0",
@@ -21,6 +22,8 @@
     "react-i18next": "^15.0.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
+    "react-select": "^5.8.0",
+    "react-select-country-list": "^2.2.3",
     "router": "^1.3.8",
     "styled-components": "^6.1.12",
     "topojson-client": "^3.1.0"
@@ -28,6 +31,7 @@
   "devDependencies": {
     "@aws-amplify/backend": "^1.0.4",
     "@aws-amplify/backend-cli": "^1.1.1",
+    "@types/country-list": "^2.1.4",
     "@types/d3": "^7.4.3",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
