img fix modify amplify.yml

--- a/amplify.yml
+++ b/amplify.yml
@@ -10,6 +10,7 @@ frontend:
     build:
       commands:
         - npm run build
+        - ls -lh dist/assets/
   artifacts:
     baseDirectory: dist
     files:
