--- a/amplify.yml
+++ b/amplify.yml
@@ -13,8 +13,11 @@ frontend:
     build:
       commands:
         - npm run build
+        - ls -lh dist/
         - ls -lh dist/assets/
         - file dist/assets/vegetables-B1iwWbc8.png
+        - file public/images/vegetables.png
+        - ls -lh public/images/vegetables.png
   artifacts:
     baseDirectory: dist
     files:
