img fix add clear cache in yml

--- a/amplify.yml
+++ b/amplify.yml
@@ -12,6 +12,7 @@ frontend:
         - npm install
     build:
       commands:
+        - npm run clean
         - npm run build
         - ls -lh dist/
         - ls -lh dist/assets/
