--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "d3": "^7.9.0",
     "html2pdf.js": "^0.10.2",
     "i18next": "^23.14.0",
+    "iso-3166-1": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^15.0.1",
