--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "country-list": "^2.3.0",
     "d3": "^7.9.0",
     "html2pdf.js": "^0.10.2",
+    "i18n-iso-countries": "^7.12.0",
     "i18next": "^23.14.0",
     "iso-3166-1": "^2.1.1",
     "react": "^18.2.0",
